Workarounds for .ini files not including declared options in .product definitions.