@@ -73,6 +73,12 @@
 			token="file:plugins/org.eclipse.core.runtime_3.4.0.v20080512.jar,4,false" 
 			value="file:plugins/org.eclipse.core.runtime_3.4.0.v20080512.jar,4,true"/>
 			
+		<!-- workaround for missing args in generated .ini file that are declared in .product file -->
+		<concat append="true" destfile="${buildDirectory}/${buildLabel}/p2/tmp/win32.win32.x86/eclipse/dsltoolkit.ini">-Xms128m
+-Xmx1024m
+-XX:MaxPermSize=256m
+		</concat>
+		
 		<zip destfile="${buildDirectory}/${buildLabel}/p2/dsltk-incubation.win32.win32.x86.zip" basedir="${buildDirectory}/${buildLabel}/p2/tmp/win32.win32.x86/eclipse"/>
 		<mkdir dir="${buildDirectory}/${buildLabel}/p2/tmp/linux.gtk.x86/eclipse" />
 		<antcall target="run.director">
@@ -87,6 +93,12 @@
 		<replace file="${buildDirectory}/${buildLabel}/p2/tmp/linux.gtk.x86/eclipse/configuration/org.eclipse.equinox.simpleconfigurator/bundles.info" 
 			token="file:plugins/org.eclipse.core.runtime_3.4.0.v20080512.jar,4,false" 
 			value="file:plugins/org.eclipse.core.runtime_3.4.0.v20080512.jar,4,true"/>
+		
+		<!-- workaround for missing args in generated .ini file that are declared in .product file -->
+		<concat append="true" destfile="${buildDirectory}/${buildLabel}/p2/tmp/linux.gtk.x86/eclipse/dsltoolkit.ini">-Xms128m
+-Xmx1024m
+-XX:MaxPermSize=256m
+		</concat>
 		
 		<exec executable="tar" dir="${buildDirectory}/${buildLabel}/p2/tmp/linux.gtk.x86/">
 			<arg line="${tarargs}-cvf ${buildDirectory}/${buildLabel}/p2/dsltk-incubation.linux.gtk.x86.tar ${archivePrefix}"/>
